# kaniko-remote

./: .gitignore  .kaniko-remote.yaml  LICENSE  README.md  kaniko-remote.csproj  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  release.yaml
docker-cli/: pyproject.toml
docs/3rd_party_licenses/: pathspec.md
src/: Config.cs  Exceptions.cs  Program.cs  SimpleLogger.cs
src/Auth/: ACR.cs  Authoriser.cs  DockerHub.cs  GCR.cs  IAuthoriser.cs  Matcher.cs  Options.cs  PodOnly.cs
src/Builder/: Arguments.cs  Builder.cs  Options.cs
src/CLI/: BuildArguments.cs  BuildCommand.cs  Logger.cs
src/Config/: Builder.cs  Config.cs  ConfigurableSection.cs  Kubernetes.cs  Tagger.cs
src/K8s/: NamespacedClient.cs  Options.cs  Specs.cs
src/Parser/: BuildCommand.cs
src/Tagger/: Options.cs  Tagger.cs
src/kaniko_remote/: __init__.py  authorisers.py  builder.py  config.py  k8s.py  logging.py  main.py  tagger.py
src/kaniko_remote/config/: config.py
src/kaniko_remote/k8s/: k8s.py  specs.py
tests/: conftest.py
tests/configs/: builder.yaml  pod_only_auth.yaml  simple.yaml
tests/test-context/: .dockerignore  Dockerfile  file-that-will-be-sent.md
tests/tests/: 1_config.py  2_k8sspecs.py  3_authorisers.py
