[metadata]
name = kaniko-remote
version = attr: kaniko_remote.__version__
author = Lucas Sargent
author_email = me@lucas.fish
description = Enable familiar `docker build` semantics using kaniko on k8s
keywords = kaniko kubernetes k8s docker build images remote
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JJ11teen/kaniko-remote
project_urls =
    Bug Tracker = https://github.com/JJ11teen/kaniko-remote/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    asyncclick>=8.0
    anyio>=3.5
    tqdm>=4
    # kubernetes_asyncio>=22.6
    kubernetes>=22.6

[options.extras_require]
tests = pytest==6.2.4

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    kaniko-remote = kaniko_remote.main:cli
    # TODO: make this optional
    docker = kaniko_remote.main:cli

[options.packages.find]
where = src